# api-contract-validator

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO_GUIDE.md  ENHANCEMENTS.md  FOR_ORGANIZATIONS.md  GETTING_STARTED.md  INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  QUICKSTART.md  QUICK_REFERENCE.md  README.md  acv_config.yaml.template  acv_config_with_headers.yaml  coverage.xml  demo.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/skills/: acv-analyze.md  acv-config.md  fix-validation-drift.md
.github/workflows/: ci.yml
config/: default.yaml
demo/: README.md  analyze_specs.py  run_live_validation.py  run_simple_validation.py  run_validation.sh  validate_specs.py
demo/mock-apis/: ecommerce_mock.py  healthcare_mock.py
demo/outputs/: COMPLETION_SUMMARY.md  DEMO_RESULTS.md
demo/outputs/ecommerce/: live_validation_report_20260425_062328.md  spec_analysis.md  spec_info.json
demo/outputs/healthcare/: spec_analysis.md  spec_info.json
demo/prds/: rideshare-platform-prd.md  smart-home-iot-prd.md
demo/specs/: e-commerce-api.yaml  healthcare-api.yaml
docs/: CI_CD_INTEGRATION.md  INTEGRATION_GUIDE.md  PUBLISHING.md  USAGE_EXAMPLES.md
examples/: demo_page_ranking.py
examples/integration-examples/: README.md
examples/integration-examples/django-project/: README.md
examples/mock_apis/: users_api.py
examples/openapi/: sample_users_api.yaml
output/: drift_report_20260401_055519.json  drift_report_20260401_055519.md  drift_report_20260401_055543.json  drift_report_20260401_055543.md  drift_report_20260402_052859.json  drift_report_20260402_052859.md  drift_report_20260404_174508.json  drift_report_20260404_174508.md
src/api_contract_validator/: __init__.py
src/api_contract_validator/analysis/context/: __init__.py  page_ranker.py
src/api_contract_validator/analysis/drift/: __init__.py  behavioral_drift.py  contract_drift.py  detector.py  models.py  validation_drift.py
src/api_contract_validator/analysis/reasoning/: __init__.py  analyzer.py  models.py
src/api_contract_validator/api/: README.md  __init__.py  server.py
src/api_contract_validator/chaos/: differential.py  interceptor.py
src/api_contract_validator/cli/: main.py
src/api_contract_validator/config/: __init__.py  exceptions.py  loader.py  logging.py  models.py
src/api_contract_validator/execution/collector/: result_collector.py
src/api_contract_validator/execution/runner/: executor.py
src/api_contract_validator/generation/: base.py  test_generator.py
src/api_contract_validator/generation/boundary/: generator.py
src/api_contract_validator/generation/fuzzing/: __init__.py  fuzzer.py  mutations.py
src/api_contract_validator/generation/invalid/: generator.py
src/api_contract_validator/generation/prioritizer/: risk_ranker.py
src/api_contract_validator/generation/stateful/: __init__.py  dependency.py  workflow.py
src/api_contract_validator/generation/valid/: generator.py
src/api_contract_validator/input/normalizer/: models.py
src/api_contract_validator/input/openapi/: parser.py
src/api_contract_validator/input/prd/: parser.py
src/api_contract_validator/mutation/: mutator.py
src/api_contract_validator/progressive/: tracker.py
src/api_contract_validator/reporting/: __init__.py  generator.py  models.py
src/api_contract_validator/reporting/claude_integration/: __init__.py  generator.py
src/api_contract_validator/reporting/cli/: __init__.py  formatter.py
src/api_contract_validator/reporting/json/: __init__.py  generator.py
src/api_contract_validator/reporting/markdown/: __init__.py  generator.py
src/api_contract_validator/schema/composition/: __init__.py  allof_validator.py  anyof_validator.py  discriminator_validator.py  oneof_validator.py
src/api_contract_validator/schema/contract/: constraint_extractor.py  contract_model.py  (+1 more)
src/api_contract_validator/semantic/: generator.py
src/api_contract_validator/smartselection/: selector.py
tests/: conftest.py  test_multi_spec.py
tests/integration/: test_claude_integration.py  test_cli_commands.py  test_end_to_end.py
tests/unit/: test_ai_analyzer.py  test_boundary_generator.py  test_config_loader.py  test_constraint_extractor.py  test_drift_detector.py  test_drift_models.py  test_executor.py  test_invalid_generator.py  test_master_generator.py  test_openapi_parser.py  test_prioritizer.py  test_report_generator.py  test_result_collector.py  test_schema_composition.py  test_valid_generator.py
(+3 files in other folders)
